--- a/src/SettingOptionsForm.ui
+++ b/src/SettingOptionsForm.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>411</width>
     <height>300</height>
    </rect>
   </property>
@@ -26,7 +26,7 @@
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -48,6 +48,9 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
+       <widget class="QComboBox" name="comboBox_openai_gpt_model"/>
+      </item>
+      <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>OpenAI API Key</string>
@@ -63,7 +66,7 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -75,6 +78,12 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>pushButton_edit_profiles</tabstop>
+  <tabstop>groupBox_generate_commit_message_by_ai</tabstop>
+  <tabstop>comboBox_openai_gpt_model</tabstop>
+  <tabstop>lineEdit_openai_api_key</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
