--- a/src/EditRemoteDialog.ui
+++ b/src/EditRemoteDialog.ui
@@ -83,7 +83,7 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -98,7 +98,7 @@
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -112,6 +112,9 @@
       <widget class="QPushButton" name="pushButton_ok">
        <property name="text">
         <string>OK</string>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -141,6 +144,7 @@
  </customwidgets>
  <tabstops>
   <tabstop>lineEdit_name</tabstop>
+  <tabstop>lineEdit_url</tabstop>
   <tabstop>pushButton_test</tabstop>
   <tabstop>pushButton_ok</tabstop>
   <tabstop>pushButton_close</tabstop>
