--- a/src/EditRemoteDialog.ui
+++ b/src/EditRemoteDialog.ui
@@ -23,14 +23,20 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Name</string>
+         <string>&amp;Name</string>
+        </property>
+        <property name="buddy">
+         <cstring>lineEdit_name</cstring>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>URL</string>
+         <string>&amp;URL</string>
+        </property>
+        <property name="buddy">
+         <cstring>lineEdit_url</cstring>
         </property>
        </widget>
       </item>
@@ -111,7 +117,7 @@
      <item>
       <widget class="QPushButton" name="pushButton_ok">
        <property name="text">
-        <string>OK</string>
+        <string>&amp;OK</string>
        </property>
        <property name="default">
         <bool>true</bool>
@@ -121,7 +127,7 @@
      <item>
       <widget class="QPushButton" name="pushButton_close">
        <property name="text">
-        <string>Close</string>
+        <string>&amp;Close</string>
        </property>
       </widget>
      </item>
