--- a/src/SettingOptionsForm.ui
+++ b/src/SettingOptionsForm.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>411</width>
-    <height>300</height>
+    <height>411</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,7 +26,7 @@
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Orientation::Horizontal</enum>
+        <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -58,6 +58,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QCheckBox" name="checkBox_use_OPENAI_API_KEY_env_value">
+        <property name="text">
+         <string>Use OPENAI_API_KEY environment value</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QLineEdit" name="lineEdit_openai_api_key"/>
       </item>
      </layout>
@@ -66,7 +73,7 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Orientation::Vertical</enum>
+      <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -82,6 +89,7 @@
   <tabstop>pushButton_edit_profiles</tabstop>
   <tabstop>groupBox_generate_commit_message_by_ai</tabstop>
   <tabstop>comboBox_openai_gpt_model</tabstop>
+  <tabstop>checkBox_use_OPENAI_API_KEY_env_value</tabstop>
   <tabstop>lineEdit_openai_api_key</tabstop>
  </tabstops>
  <resources/>
