--- a/src/SettingOptionsForm.ui
+++ b/src/SettingOptionsForm.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Options</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
@@ -26,7 +26,7 @@
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -39,51 +39,9 @@
     </layout>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox_generate_commit_message_by_ai">
-     <property name="title">
-      <string>Ge&amp;nerate commit message with AI</string>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QComboBox" name="comboBox_ai_model"/>
-      </item>
-      <item>
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>API Key</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_use_OPENAI_API_KEY_env_value">
-        <property name="text">
-         <string>Use OPENAI_API_KEY environment value</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEdit_openai_api_key"/>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_use_ANTHROPIC_API_KEY_env_value">
-        <property name="text">
-         <string>Use ANTHROPIC_API_KEY environment value</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEdit_anthropic_api_key"/>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -97,12 +55,6 @@
  </widget>
  <tabstops>
   <tabstop>pushButton_edit_profiles</tabstop>
-  <tabstop>groupBox_generate_commit_message_by_ai</tabstop>
-  <tabstop>comboBox_ai_model</tabstop>
-  <tabstop>checkBox_use_OPENAI_API_KEY_env_value</tabstop>
-  <tabstop>lineEdit_openai_api_key</tabstop>
-  <tabstop>checkBox_use_ANTHROPIC_API_KEY_env_value</tabstop>
-  <tabstop>lineEdit_anthropic_api_key</tabstop>
  </tabstops>
  <resources/>
  <connections/>
