fix commig message generation

--- a/src/SettingAiForm.ui
+++ b/src/SettingAiForm.ui
@@ -24,7 +24,11 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QComboBox" name="comboBox_ai_model"/>
+       <widget class="QComboBox" name="comboBox_ai_model">
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLabel" name="label">
