Implement detailed comment generation in CommitMessageGenerator
Adds a new background thread class `GenerateCommitMessageThread` to handle generating commit messages and detailed comments asynchronously.
The commit dialog now uses this thread to request message generation without blocking the UI.
Enables generating a supplemental detailed comment to explain more about the commit message.
Refactors the `CommitMessageGenerator` to support different prompt types for commit messages and detailed comments.

--- a/src/CommitDialog.ui
+++ b/src/CommitDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>568</width>
-    <height>389</height>
+    <width>683</width>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -231,6 +231,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButton_generate_detailed_comment">
+       <property name="text">
+        <string>Add detailed comment</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Orientation::Horizontal</enum>
@@ -295,6 +302,7 @@
   <tabstop>groupBox_gpg_sign</tabstop>
   <tabstop>pushButton_config_signing</tabstop>
   <tabstop>pushButton_generate_with_ai</tabstop>
+  <tabstop>pushButton_generate_detailed_comment</tabstop>
   <tabstop>checkbox_amend</tabstop>
   <tabstop>plainTextEdit</tabstop>
   <tabstop>pushButton</tabstop>
