--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -852,7 +852,7 @@
               <number>0</number>
              </property>
              <item>
-              <widget class="FilesListWidget" name="listWidget_unstaged">
+              <widget class="FileListWidget" name="listWidget_unstaged">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                  <horstretch>0</horstretch>
@@ -1053,7 +1053,7 @@
               </widget>
              </item>
              <item>
-              <widget class="FilesListWidget" name="listWidget_staged">
+              <widget class="FileListWidget" name="listWidget_staged">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                  <horstretch>0</horstretch>
@@ -1085,7 +1085,7 @@
               <number>0</number>
              </property>
              <item>
-              <widget class="FilesListWidget" name="listWidget_files">
+              <widget class="FileListWidget" name="listWidget_files">
                <property name="contextMenuPolicy">
                 <enum>Qt::CustomContextMenu</enum>
                </property>
@@ -1888,9 +1888,9 @@
    <header>MyToolButton.h</header>
   </customwidget>
   <customwidget>
-   <class>FilesListWidget</class>
+   <class>FileListWidget</class>
    <extends>QListWidget</extends>
-   <header>FilesListWidget.h</header>
+   <header>FileListWidget.h</header>
   </customwidget>
   <customwidget>
    <class>RepositoryWrapperFrame</class>
